--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ td, th{
 .imagen-diferenciales{
     width: 60%;
     transition: 500ms;
-    box-shadow: 10px 10px 15px black, -10px -10px 15px red;
+    box-shadow: 10px 10px 15px black;
 }
 .imagen-diferenciales:hover{
     opacity: 0.4;
